<resources>
    <string name="app_name">FriendCircle</string>
    <string name="title_activity_maps">My Circle</string>
    <string name="send_msg">Send Message</string>
    <string name="add_friend">Add Friend</string>
    <string name="sent_msgs">Sent Messages</string>
    <string name="rcvd_msgs">Receved Messages</string>
    <string name="auto_fwd">Auto Forward</string>
    <string name="adj_radious">Adjust Range</string>
    <string name="register_me">Settings</string>
    <string name="subscribe_me">Subscribe </string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="switch_mqtt">switch_mqtt</string>
    <string name="pref_title_connect_mqtt">Enable Connection</string>
    <string name="pref_description_connect_mqtt">Recommended to send and receive data automatically
    </string>
    <string name="pref_title_autofwd">Enable Auto FWd</string>
    <string name="pref_description_autofwd">Recommended to users want to forward help messages automatically
    </string>

    <string name="pref_title_display_name">Your name</string>
    <string name="pref_default_display_name"> eg: Obama</string>

    <string name="pref_title_display_number">Your number</string>
    <string name="pref_default_display_number">eg: 0176XXXXXXXX</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency (Time)</string>
    <string-array name="pref_sync_frequency_titles">
        <item>1 minute</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>2 hours</item>
        <item>3 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>1</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>120</item>
        <item>180</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_sync_frequency_dist">Sync frequency (Distance)</string>
    <string-array name="pref_sync_frequency_titles_dist">
        <item>10 meter</item>
        <item>100 meter</item>
        <item>200 meter</item>
        <item>500 meter</item>
        <item>1 Km</item>
        <item>2 Km</item>
        <item>5 Km</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values_dist">
        <item>1</item>
        <item>1000</item>
        <item>2000</item>
        <item>5000</item>
        <item>10000</item>
        <item>20000</item>
        <item>50000</item>
        <item>-1</item>
    </string-array>

    <string-array name="trust_levels">
        <item>50</item>
        <item>60</item>
        <item>70</item>
        <item>80</item>
        <item>90</item>
        <item>100</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
