<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="setting2_preferencescreen">

    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/switch_mqtt"
        android:summary="@string/pref_description_connect_mqtt"
        android:title="@string/pref_title_connect_mqtt" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="switch_autofwd"
        android:summary="@string/pref_description_autofwd"
        android:title="@string/pref_title_autofwd" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:hint="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="example_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />

    <EditTextPreference
        android:capitalize="words"
        android:hint="@string/pref_default_display_number"
        android:inputType="textCapWords"
        android:key="user_number"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_number" />
    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:key="example_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_add_friends_to_messages" />

</PreferenceScreen>
